feat: Implement comprehensive leave management, employee dashboard, attendance history, and Spring Security configuration.